fixed labelalignment on forumpage

--- a/scss/_subpages.scss
+++ b/scss/_subpages.scss
@@ -7,6 +7,9 @@
       align-items: center;
     }
   }
+  #newdiscussionform {
+    float: unset;
+  }
 }
 
 /* Forums Page - List of all Discussion Forums */
